--- a/cmake/Ah5Config.cmake.in
+++ b/cmake/Ah5Config.cmake.in
@@ -22,6 +22,5 @@
 # THE SOFTWARE.
 ################################################################################
 
-set(AH5_INCLUDE_PATH "@HDF5_C_INCLUDE_PATH@")
-set(AH5_INCLUDE_PATH "${AH5_INCLUDE_PATH}" @Ah5_INCLUDE_PATH@)
+set(Ah5_INCLUDE_PATH @Ah5_INCLUDE_PATH@)
 include("${CMAKE_CURRENT_LIST_DIR}/Ah5Lib.cmake")
