--- a/cmake/Ah5Config.cmake.in
+++ b/cmake/Ah5Config.cmake.in
@@ -23,4 +23,5 @@
 ################################################################################
 
 set(Ah5_INCLUDE_PATH @Ah5_INCLUDE_PATH@)
+set(Ah5_LINK_FLAGS @Ah5_LINK_FLAGS@)
 include("${CMAKE_CURRENT_LIST_DIR}/Ah5Lib.cmake")
