--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,26 +22,14 @@
 # THE SOFTWARE.
 ################################################################################
 
-cmake_minimum_required(VERSION 2.8)
-# protect the project call to workaround a cmake bug
-project(Ah5_tests C Fortran)
-
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake/")
-
-add_subdirectory(.. ah5)
-
-include(AppendProperty)
-
-# find_package(Ah5 REQUIRED)
-find_package(OMP REQUIRED)
-
 include_directories(${Ah5_INCLUDE_PATH})
 
-add_executable(test_ah5_c test_ah5.c)
-append_property(TARGET test_ah5_c PROPERTY LINK_FLAGS " ${OMP_C_LINK_FLAGS}")
 find_library(M_LIB m)
-target_link_libraries(test_ah5_c ah5.shared ${M_LIB})
-# or target_link_libraries(test_ah5_c ah5.static)
+
+add_executable(test_ah5_c_shared test_ah5.c)
+# append_property(TARGET test_ah5_c PROPERTY LINK_FLAGS " ${OMP_C_LINK_FLAGS}")
+target_link_libraries(test_ah5_c_shared ah5.shared ${M_LIB})
+add_test(NAME test_ah5_c_shared COMMAND test_ah5_c_shared)
 
 add_executable(test_ah5_f test_ah5.F90)
 append_property(TARGET test_ah5_f PROPERTY LINK_FLAGS " ${OMP_Fortran_LINK_FLAGS}")
