--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,15 +23,24 @@
 ################################################################################
 
 include_directories(${Ah5_INCLUDE_PATH})
-
 find_library(M_LIB m)
 
 add_executable(test_ah5_c_shared test_ah5.c)
-# append_property(TARGET test_ah5_c PROPERTY LINK_FLAGS " ${OMP_C_LINK_FLAGS}")
 target_link_libraries(test_ah5_c_shared ah5.shared ${M_LIB})
+append_property(TARGET test_ah5_c_shared PROPERTY LINK_FLAGS " ${Ah5_LINK_FLAGS} ")
 add_test(NAME test_ah5_c_shared COMMAND test_ah5_c_shared)
 
-add_executable(test_ah5_f test_ah5.F90)
-append_property(TARGET test_ah5_f PROPERTY LINK_FLAGS " ${OMP_Fortran_LINK_FLAGS}")
-target_link_libraries(test_ah5_f ah5.static ah5_f90.static  ${HDF5_STATIC_Fortran_LIBRARIES} ${HDF5_STATIC_C_LIBRARIES})
-# or target_link_libraries(test_ah5_f ah5.shared)
+add_executable(test_ah5_c_static test_ah5.c)
+target_link_libraries(test_ah5_c_static ah5.static ${M_LIB})
+append_property(TARGET test_ah5_c_static PROPERTY LINK_FLAGS " ${Ah5_LINK_FLAGS} ")
+add_test(NAME test_ah5_c_static COMMAND test_ah5_c_static)
+
+add_executable(test_ah5_f_shared test_ah5.F90)
+target_link_libraries(test_ah5_f_shared ah5.shared ah5_f90.shared ${M_LIB})
+append_property(TARGET test_ah5_f_shared PROPERTY LINK_FLAGS " ${Ah5_LINK_FLAGS} ")
+add_test(NAME test_ah5_f_shared COMMAND test_ah5_f_shared)
+
+add_executable(test_ah5_f_static test_ah5.F90)
+target_link_libraries(test_ah5_f_static ah5.static ah5_f90.static ${M_LIB})
+append_property(TARGET test_ah5_f_static PROPERTY LINK_FLAGS " ${Ah5_LINK_FLAGS} ")
+add_test(NAME test_ah5_f_static COMMAND test_ah5_f_static)
