--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -27,22 +27,22 @@ find_library(M_LIB m)
 
 add_executable(ah5_example_c_shared ah5_example.c)
 target_link_libraries(ah5_example_c_shared ah5.shared ${M_LIB})
-append_property(TARGET ah5_example_c_shared PROPERTY LINK_FLAGS " ${Ah5_LINK_FLAGS} ")
+append_property(TARGET ah5_example_c_shared PROPERTY LINK_FLAGS " ${Ah5_SHARED_LINK_FLAGS} ")
 add_test(NAME ah5_example_c_shared COMMAND ah5_example_c_shared)
 
 add_executable(ah5_example_c_static ah5_example.c)
 target_link_libraries(ah5_example_c_static ah5.static ${M_LIB})
-append_property(TARGET ah5_example_c_static PROPERTY LINK_FLAGS " ${Ah5_LINK_FLAGS} ")
+append_property(TARGET ah5_example_c_static PROPERTY LINK_FLAGS " ${Ah5_STATIC_LINK_FLAGS}")
 add_test(NAME ah5_example_c_static COMMAND ah5_example_c_static)
 
 if("${ENABLE_FORTRAN}")
 	add_executable(ah5_example_f_shared ah5_example.F90)
 	target_link_libraries(ah5_example_f_shared ah5.shared ah5_f90.shared ${M_LIB})
-	append_property(TARGET ah5_example_f_shared PROPERTY LINK_FLAGS " ${Ah5_LINK_FLAGS} ")
+	append_property(TARGET ah5_example_f_shared PROPERTY LINK_FLAGS " ${Ah5_Fortran_SHARED_LINK_FLAGS}")
 	add_test(NAME ah5_example_f_shared COMMAND ah5_example_f_shared)
 
 	add_executable(ah5_example_f_static ah5_example.F90)
 	target_link_libraries(ah5_example_f_static ah5.static ah5_f90.static ${M_LIB})
-	append_property(TARGET ah5_example_f_static PROPERTY LINK_FLAGS " ${Ah5_LINK_FLAGS} ")
+	append_property(TARGET ah5_example_f_static PROPERTY LINK_FLAGS " ${Ah5_Fortran_STATIC_LINK_FLAGS}")
 	add_test(NAME ah5_example_f_static COMMAND ah5_example_f_static)
 endif()
