--- a/tests/ext_inst/CMakeLists.txt
+++ b/tests/ext_inst/CMakeLists.txt
@@ -38,19 +38,23 @@ include_directories(${Ah5_INCLUDE_PATH})
 add_executable(ah5_example_c_shared ../../examples/ah5_example.c)
 target_link_libraries(ah5_example_c_shared ah5.shared ${M_LIB})
 append_property(TARGET ah5_example_c_shared PROPERTY LINK_FLAGS " ${Ah5_SHARED_LINK_FLAGS} ")
+append_property(TARGET ah5_example_c_shared PROPERTY COMPILE_FLAGS " ${Ah5_SHARED_COMPILE_FLAGS} ")
 add_test(NAME ah5_example_c_shared COMMAND ah5_example_c_shared)
 
 add_executable(ah5_example_c_static ../../examples/ah5_example.c)
 target_link_libraries(ah5_example_c_static ah5.static ${M_LIB})
 append_property(TARGET ah5_example_c_static PROPERTY LINK_FLAGS " ${Ah5_STATIC_LINK_FLAGS}")
+append_property(TARGET ah5_example_c_static PROPERTY COMPILE_FLAGS " ${Ah5_STATIC_COMPILE_FLAGS}")
 add_test(NAME ah5_example_c_static COMMAND ah5_example_c_static)
 
 add_executable(ah5_example_f_shared ../../examples/ah5_example.F90)
 target_link_libraries(ah5_example_f_shared ah5.shared ah5_f90.shared ${M_LIB})
 append_property(TARGET ah5_example_f_shared PROPERTY LINK_FLAGS " ${Ah5_Fortran_SHARED_LINK_FLAGS}")
+append_property(TARGET ah5_example_f_shared PROPERTY COMPILE_FLAGS " ${Ah5_Fortran_SHARED_COMPILE_FLAGS}")
 add_test(NAME ah5_example_f_shared COMMAND ah5_example_f_shared)
 
 add_executable(ah5_example_f_static ../../examples/ah5_example.F90)
 target_link_libraries(ah5_example_f_static ah5.static ah5_f90.static ${M_LIB})
 append_property(TARGET ah5_example_f_static PROPERTY LINK_FLAGS " ${Ah5_Fortran_STATIC_LINK_FLAGS}")
+append_property(TARGET ah5_example_f_static PROPERTY COMPILE_FLAGS " ${Ah5_Fortran_STATIC_COMPILE_FLAGS}")
 add_test(NAME ah5_example_f_static COMMAND ah5_example_f_static)
